# Git-Diff-Stepper

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml  release.yml
doc/: demo.mov
src/: App.css  App.tsx  Decorations.ts  DiffView.tsx  Mafs.ts  MonacoLogController.tsx  MonacoPatchController.tsx  Patches.ts  Repeater.ts  SetLanguage.ts  StepperView.tsx  TextMate.ts  Themes.ts  ViewZones.ts  main.tsx  patch.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/themes/: vs-dark-modern.json  vs-dark-plus.json  vs-light-modern.json
src/monaco/: Decorations.ts  MonacoLogController.tsx  MonacoPatchController.tsx  SetLanguage.ts  TextMate.ts  Themes.ts  ViewZones.ts
src/view/: App.css  App.tsx
